# eeg

./: .gitignore  Dockerfile  Readme.md  kmeans.py  main.py  main_no_riemann.py  main_old.py  mvmd.py  mvmd_2.py  mvmd_test.py  pyproject.toml  server.py  subject.py  test.py  test2.py
classification/: AdaptiveRiemannianTransformer.py  DomainAwareRiemannianTransformer.py  DualStreamRiemannNet.py  ModeWiseRiemannianTransformer.py  RiemannianModeNet.py  VMDInceptionNet.py
data/: export_import_npy.py  parser.py  reorganizer.py
decomposition/: BoundedTensorMVMD.py  FixedMVMD.py  decompose.py
riemann/: RiemannianTransformer.py
src/: Readme.md  config.json  data_loading.py  evaluation.py  main.py  pipeline.py  visualization.py
src/decomposition/: BoundedTensorMVMD.py  FixedMVMD.py  MVMD.py
src/pipeline_components/: mvmd.py  mvmd_2.py
src/tools/: create_dataset.py
test/: llm.py  load_data_test.py  mi_tutorial.py  tutorial.py
tmvmd/: TensorMVMD.py  bandpass_filter.py  ppp.py  select_channels.py  signal.txt  test_fixedtmvmd.py  test_tmvmd.py  vmd_filter_visualization.py
tools/: Readme.md  create_dataset.json  create_dataset.py
