[tool.poetry]
name = "eeg"
version = "0.1.0"
description = ""
authors = ["Stanisław Zakrzewski <stanislaw.zakrzewski13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
sktime = "^0.40.1"
mne = "^1.11.0"
numpy = "2.3.5"
matplotlib = "3.9"
pyedflib = "^0.1.42"
pyriemann = "^0.10"
moabb = "^1.4.3"
flask = "^3.1.3"
filelock = "^3.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
